[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx_laser1.wav" type="AudioStream" id=4]

[node name="Player" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
_speed = 300

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -41.7935, 3.25281, -28.43, 25.9707, -12.8392, 22.4071, -9.27567, 28.198, 8.98776, 28.198, 12.5514, 21.9617, 27.6966, 25.5253, 42.3965, 3.69826, 7.65143, -14.1197, 2.75146, -27.9286, -3.03937, -27.9286, -8.38477, -14.5652 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, -42.4264 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
